File: plugins/nexus-ssl-plugin/src/test/java/com/sonatype/nexus/ssl/plugin/internal/keystore/KeyStoreDAOTest.java